# PARCO-Computing-2026-246783

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  buildHPC.sh  build_and_run.sh  d1_SpMV  d2_SpMV  mpi_spmv_parallel.csv  mpi_spmv_results.csv  mpi_weak_scaling.csv  runBM.pbs  run_bm.pbs  test.sh  testHPC.sh
include/: agent.hpp  benchmark.hpp  d_matrix.hpp  mpi_benchmark.hpp  p_reader.hpp  pch.h  s_matrix.hpp
plots/: 1138_bus_results.csv  fl2010_results.csv  mpi_plot.py  plot.py
src/: agent.cpp  benchmark.cpp  d_matrix.cpp  main.cpp  mpi_benchmark.cpp  p_reader.cpp  pthreads_impl.cpp  s_matrix.cpp
